# RAVEN_Neural_Network_Estimator

./: README.md
CV/ros_part/src/raven_img_recorder/: CMakeLists.txt  package.xml
CV/ros_part/src/raven_img_recorder/launch/: bag_fixer_p1.launch  img_extractor0.launch  img_extractor0123.launch  img_extractor0123_png.launch  img_extractor0_frame_jump.launch  init_cam0.launch  init_cam0123.launch  init_cam0123_720p.launch  init_cam01_720p.launch  init_cam01_as23_720p.launch  init_cam0_720p.launch  init_cam0_720p_centerline.launch  init_cam1.launch  init_cam1_720p.launch  init_cam23.launch  recorder_cam0123_uncompress.launch  recorder_cam0123_uncompress_full.launch  recorder_cam0_uncompress.launch  test_init_turtlesim.launch  test_recorder_with_turtlesim.launch  test_recorder_with_turtlesim_uncompress.launch  test_turtlesim_state_extractor.launch
CV/ros_part/src/raven_img_recorder/launch/back_up_and_out_of_date/: backup.launch  frame_extractor.launch  test_with_turtlesim1.launch
CV/ros_part/src/raven_img_recorder/src/: center_line_calibrator.py  img_bag_reader.py  img_bag_reader_frame_jump.py  img_bag_reader_png.py  raven_img_recorder.py  raven_state_bag_reader.py  test_turtle_bag_reader.py  test_turtlesim_random.cpp
CV/ros_part/src/raven_img_recorder/src/backup/: raven_state_bag_reader.py
DNN/: func_decay_filter.py  func_feature_generator.py  func_filters.py  func_load_ravenstate.py  func_name_ravenstate.py  func_raven_dnn2.py  func_sav_gol_filter.py  program_raven_dnn.py  test2.py  test_decay_filter.py  test_decay_filter2.py  test_load_model.py  test_pandas.py  (+7 more)
(+100 files in other folders)
